@@ -66,6 +66,11 @@ public class BTHandshake implements BTMessage, RawMessage {
   private final byte[] peer_id_bytes;
   private final byte version;
   
+  private static byte[] duplicate(byte[] b) {
+	  byte[] r = new byte[b.length];
+	  System.arraycopy(b, 0, r, 0, b.length);
+	  return r;
+  }
   
   /**
    * Used for outgoing handshake message.
@@ -74,7 +79,7 @@ public class BTHandshake implements BTMessage, RawMessage {
    * @param set_reserve_bit
    */
   public BTHandshake( byte[] data_hash, byte[] peer_id, boolean set_reserve_bit, byte version ) {
-    this( set_reserve_bit ? AZ_RESERVED : BT_RESERVED, data_hash, peer_id, version );
+    this( duplicate(set_reserve_bit ? AZ_RESERVED : BT_RESERVED), data_hash, peer_id, version );
   }
   
   
